--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lazyload": "^3.0.0",
+    "react-mt-svg-lines": "^0.9.1",
+    "react-parallax-mousemove": "^1.1.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
     "react-spring": "^8.0.27",
