--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://adiaharonov.github.io/ReactProtfolio/",
   "dependencies": {
+    "@n8tb1t/use-scroll-position": "^1.0.47",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
