--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "framer-motion": "^2.9.4",
+    "konva": "^7.1.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-konva": "^17.0.0-0",
     "react-lazyload": "^3.0.0",
     "react-mt-svg-lines": "^0.9.1",
     "react-parallax-mousemove": "^1.1.0",
