--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
     "react-spring": "^8.0.27",
+    "react-tooltip": "^4.2.10",
     "react-typical": "^0.1.3",
     "sass": "^1.26.9"
   },
